docs/book/samples/ch05/welcome.out
error[endpoint]: unhandled err reached the executor: "missing index 1"
  born in first at welcome.kso:4
