docs/book/samples/ch05/welcome.kso
import "std/io"

fn first xs
  xs[1]!

fn greet name
  "irasshaimase, {name}"

pub play = io/args . first . greet . print
